force-app/main/default/objects/Sales_Limitation__c/Sales_Limitation__c.object-meta.xml
<CustomObject>
    <description>Allow to create a limitation on the number of sales allowed for a Merchant and optionnaly a Targeted Country</description>
    <label>Sales Limitation</label>
    <nameField>
        <displayFormat>SL-{0000000000}</displayFormat>
        <label>Sales Limitation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Limitations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>