force-app/main/default/objects/Sales_Limitation__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Concatenation of the Back Office Merchant primary key, the Country Name (optional) and the Product Type Name (optional) with the following format : 
&lt;merchant&apos;s ID&gt;[+ &apos;_&apos; + &lt;Country Name&gt;][+ &apos;_&apos; + &lt;Product Type Name&gt;]. 
Required and case sensitive.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>