force-app/main/default/objects/Sales_Limitation__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <label>Merchant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Limitations</relationshipLabel>
    <relationshipName>Sales_Limitations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>