force-app/main/default/objects/Sales_Limitation__c/fields/Targeted_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Country_Name__c</fullName>
    <formula>Targeted_Country__r.Merchant_Country_Names__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Targeted Country Name</label>
    <type>Text</type>
</CustomField>