force-app/main/default/objects/Sales_Limitation__c/fields/Type_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Products__c</fullName>
    <label>Type of Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Types_of_products_sold</valueSetName>
    </valueSet>
</CustomField>